# modular-scraping-platform

./: .env  .env.example  .gitignore  MONITORING.md  README.md  SCHEDULING.md  appmagic_publisher_applications.json  config.yaml  ecosystem.config.js  fi_blankning.py  fi_shortinterest.db  fi_shortinterest.db-shm  fi_shortinterest.db-wal  health_check.py  main.py  main_scheduler.py  mobile_analytics.db  mobile_analytics.db-shm  mobile_analytics.db-wal  pipeline_tcgplayer.yml  pipelines.yml  pipelines_discord_example.yml  pipelines_enhanced.yml  pipelines_scheduled.yml  pokemon_sets_backup.sql  price_history_backup.sql  publisher_page.html  pyproject.toml  requirements.txt  run_pipeline.py  scheduler_jobs.db  scraper  scraper.db  scraper.db-shm  scraper.db-wal  scraper_cli.py  simple_test.py  spec.md  tcg.db  tcg.db-shm  (+16 more)
core/: interfaces.py  models.py  orchestrator.py  pipeline_orchestrator.py  plugin_loader.py
core/infra/: db.py  discord_bot.py  discord_sink.py  http.py  scheduler.py  sel.py  ws.py
db/: fi_shortinterest.db-shm  mobile_analytics.db  scheduler_jobs.db  tcg.db
development/: appmagic_plugin.py
development/tcg/: README.md  cli.py  data_collector.py  dollar_volume_analysis.py  init_db.py  load_groups_backup.py  load_groups_new.py  pokemon_sets.csv  simple_volume_analysis.py  star_wars_analysis.py  testing_backup.py  visualize_volume.py
misc/: fi_blankning.py  integration_bridge.py  jsonexample.py  search-by-ids.md  spec.md  spec_updated.md
modular_scraping_platform.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/appmagic/: __init__.py  fetcher.py  parser.py  sinks.py
plugins/tcg/: tcg.db  (+16 more)
sinks/: database_sink.py  discord_sink.py  telegram_sink.py
(+14 files in other folders)
